feat: single post pagination

--- a/src/app/_components/layout/Header/style.module.scss
+++ b/src/app/_components/layout/Header/style.module.scss
@@ -45,7 +45,7 @@
   }
 
   & #menuMobile {
-    @apply md:hidden absolute top-[50px] right-0 p-2 border-bg-dark border-t-2 border-l-2 bg-header-bg-dark;
+    @apply md:hidden absolute top-[50px] right-0 p-2 border-bg-dark border-t-2 border-l-2 bg-header-bg-dark z-50;
 
     & ul {
       @apply flex flex-col items-start list-none text-base;
