--- a/src/app/_components/layout/Header/style.module.scss
+++ b/src/app/_components/layout/Header/style.module.scss
@@ -36,10 +36,14 @@
     @apply max-md:hidden bg-header-bg-dark;
 
     & ul {
-      @apply flex items-center justify-start max-w-full mx-auto px-[15px] list-none text-[16px] tracking-[0.96px];
+      @apply flex items-center justify-start max-w-full mx-auto px-[15px] list-none text-[16px] tracking-[0.96px] md:pr-0;
 
       & li {
         @apply mx-[12px];
+
+        &:last-child {
+          @apply mr-0;
+        }
       }
     }
   }
