--- a/src/app/_components/BlogPost/markdown.css
+++ b/src/app/_components/BlogPost/markdown.css
@@ -4,6 +4,7 @@
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   margin: 0;
+  margin-top: 30px;
   color: #a9a9b3;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans",
     Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
@@ -124,7 +125,7 @@
   box-sizing: content-box;
   overflow: hidden;
   background: transparent;
-  height: 2px;
+  height: 1px;
   padding: 0;
   margin: 24px 0;
   background-color: #4e4e57;
