compress posts image

--- a/src/app/_components/BlogPost/style.scss
+++ b/src/app/_components/BlogPost/style.scss
@@ -9,6 +9,11 @@
   width: 860px;
   max-width: 860px;
   overflow: hidden;
+
+  img {
+    margin: 0 auto;
+  }
+
   @media (max-width: 900px) {
     & {
       margin: 20px 0;
